<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">geoquiz</string>
    <string name="q1">My name is Mathanagopal</string>
    <string name="q2">My age is 25</string>
    <string name="q3">My height is 5 ft</string>
    <string name="q4">I was born in Kerela</string>
    <string name="q5">I was born in November</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Incorrect</string>
    <string name="hello_world">Hello Anish!</string>
    <string name="action_settings">Settings</string>
    <string name="cheat_button">Cheat!!</string>
    <string name="cheat_Toast">Cheating is wrong</string>
    <string name="confirm_cheat_text">You really want to cheat ??</string>
    <string name="show_answer_button">Show answer</string>
</resources>
